# rust-advanced-heaps

./: .creusot.toml  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prusti.toml  BRODAL_IMPLEMENTATION.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PROOF_SETUP.md  PROOF_SUMMARY.md  PROOF_SYSTEMS.md  README.md  build.rs  kani.toml  libtest_cast.rlib  libtest_cast2.rlib  libtest_cast_context.rlib  libtest_no_cast.rlib  setup.sh
.cargo/: config.toml
.cursor/: setup-worktree.sh  worktrees.json
.github/workflows/: ci.yml  kani-verify.yml  verify.yml
benches/: dimacs_benchmark.rs  heap_perf.rs  perf_benchmark.rs  perf_table.rs  usa_road_benchmark.rs
crates/intrusive-circular-list/: Cargo.toml  README.md
crates/intrusive-circular-list/src/: lib.rs
crates/optlike/: Cargo.toml  README.md
crates/optlike/src/: lib.rs
crates/perf-measurement/: Cargo.toml
crates/perf-measurement/src/: lib.rs
docs/: K_ARY_INVESTIGATION.md  PERF_BENCHMARKING.md  REFERENCES.md  benchmarks.md  binomial_heap.md  brodal_heap.md  fibonacci_heap.md  pairing_heap.md  rank_pairing_heap.md  skew_binomial_heap.md  strict_fibonacci_heap.md  twothree_heap.md
examples/: heap_perf.rs
proofs/: README.md
proofs/kani/: all_heaps_proofs.rs  implementation_proofs.rs  stress_proofs.rs
scripts/: download-dimacs.sh  export-results.sh
src/: binomial.rs  brodal.rs  brodal_okasaki.rs  fibonacci.rs  hollow.rs  lib.rs  pairing.rs  pathfinding.rs  radix.rs  rank.rs  rank_pairing.rs  simple_binary.rs  skew_binomial.rs  skiplist.rs  stdlib_compat.rs  storage.rs  strict_fibonacci.rs  traits.rs  twothree.rs
tests/: all_heaps_proofs.rs  big_o_constant_factors.rs  big_o_proofs.rs  creusot_proofs.rs  edge_case_proofs.rs  generic_heap_tests.rs  generic_trait_proofs.rs  implementation_proofs.rs  kani.rs  kani_proofs.rs  parallel_property_tests.proptest-regressions  parallel_property_tests.rs  pathfinding_tests.rs  property_tests.proptest-regressions  property_tests.rs  prusti_proofs.rs  stress_tests.rs  trait_level_proofs.rs  twothree_invariants.rs
tests/kani/: advanced_proofs.rs  generic_trait_proofs.rs  implementation_proofs.rs  kani_proofs.rs  mod.rs  stress_proofs.rs
verus/: verus_heaps.rs
