[workspace]
members = [".", "crates/intrusive-circular-list"]

[package]
name = "rust-advanced-heaps"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Comprehensive collection of advanced heap data structures with efficient decrease_key support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rust-advanced-heaps"
keywords = ["heap", "priority-queue", "data-structure", "fibonacci-heap", "pairing-heap"]
categories = ["data-structures", "algorithms"]

[features]
# Enable expensive O(n) invariant verification checks. Only use for debugging specific issues.
# These checks significantly slow down all heap operations.
expensive_verify = []
# Enable hardware performance counter benchmarks (Linux only)
perf-counters = ["perf-event"]

[dependencies]
# For stack-allocated vectors in fixed-arity heaps
smallvec = "1.13"
# Fast hashing for pathfinding algorithms
rustc-hash = "2.0"
# For intrusive circular doubly-linked lists (used by strict Fibonacci heap)
intrusive-circular-list = { path = "crates/intrusive-circular-list" }
# For skiplist-based heap implementation
skiplist = "0.6"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
big-o-test = "0.2"
ctor = "0.2"
parking_lot = "0.12"

# Hardware performance counters (Linux only, optional)
[target.'cfg(target_os = "linux")'.dependencies]
perf-event = { version = "0.4", optional = true }

[[bench]]
name = "dimacs_benchmark"
harness = false

# Commands for cargo-cmd (install with: cargo install cargo-cmd)
[package.metadata.commands]
download-dimacs = "./scripts/download-dimacs.sh"
